<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/colorBackground"
    tools:context="com.kristenwong.localizationanddailypath.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_current_location"
        android:textSize="30sp"
        android:textColor="@color/colorLightBlue"
        android:fontFamily="sans-serif-thin"
        android:layout_marginTop="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        android:background="@color/colorLightBlue"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:textSize="17sp"
            android:textStyle="italic"
            android:textColor="@color/colorBlueGrey"
            />

        <TextView
            android:id="@+id/text_latitude_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.000"
            android:textSize="18sp"
            android:textColor="@color/colorMintGreen"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        android:background="@color/colorDarkGreen"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            android:layout_gravity="start"
            android:layout_marginStart="40dp"
            android:textSize="17sp"
            android:textStyle="italic"
            android:textColor="@color/colorBlueGrey"/>

        <TextView
            android:id="@+id/text_longitude_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.000"
            android:textSize="18sp"
            android:textColor="@color/colorMintGreen"
            android:layout_marginEnd="40dp"
            android:layout_gravity="end"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        android:background="@color/colorDarkGreen"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/address_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:layout_marginStart="40dp"
            android:layout_gravity="start"
            android:textSize="17sp"
            android:textStyle="italic"
            android:textColor="@color/colorBlueGrey"/>

        <TextView
            android:id="@+id/text_address_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="address line 1"
            android:layout_gravity="start"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:textColor="@color/colorMintGreen"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/address_title" />

    </RelativeLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/button_checkin"
            android:background="@drawable/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="17sp"
            android:padding="15dp"
            android:text="@string/check_in"
            android:textColor="@color/colorLightBlue"/>

        <Button
            android:id="@+id/button_view_map"
            android:background="@drawable/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="17dp"
            android:text="@string/view_map"
            android:textSize="17sp"
            android:padding="15dp"
            android:textColor="@color/colorLightBlue"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous_check_ins"
        android:fontFamily="sans-serif-thin"
        android:textColor="@color/colorLightBlue"
        android:textSize="25dp"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorLightBlue"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp"/>

    <ListView
        android:id="@+id/listview_checkins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:dividerHeight="2px"
        android:layout_marginTop="10dp"
        android:divider="@color/colorDarkGreen">

    </ListView>


</LinearLayout>
